# WasmEdge

./: run.sh
examples/wasmedge_hostfunctionexample_interface/example/.cargo/: config.toml
examples/wasmedge_hostfunctionexample_interface/example/src/: main.rs
examples/wasmedge_hostfunctionexample_interface/src/: lib.rs
include/host/host_function_climbstairs/: climbstairsbase.h  climbstairsenv.h  climbstairsfunc.h  climbstairsmodule.h
lib/host/: CMakeLists.txt
lib/host/host_function_climbstairs/: CMakeLists.txt  climbstairsfunc.cpp  climbstairsmodule.cpp
lib/vm/: CMakeLists.txt
tools/wasmedge/: wasmedger.cpp
